# haskell-thrift-todo-backend

./: BUILD.bazel  README.md  WORKSPACE  haskell-thrift-todo-backend.cabal  haskellPackages.nix  makefile  stack.yaml  todo-backend.thrift  todobackend.thrift  todobackendadded.thrift  todobackendremoved.thrift
examples/protocols/: examples-protocols.cabal
examples/protocols/src/: Main.hs
examples/protocols/src/Examples/Protocols/Binary/: Client.hs  Main.hs  Server.hs
examples/protocols/src/Examples/Protocols/Common/: Client.hs  Server.hs
examples/protocols/src/Examples/Protocols/JSON/: Client.hs  Main.hs  Server.hs
examples/versioning/: examples-versioning.cabal
examples/versioning/src/: Main.hs
examples/versioning/src/Examples/Versioning/: AddedFieldOldClientNewServer.hs  RemovedFieldNewClientOldServer.hs
examples/versioning/src/Examples/Versioning/AddedFieldOldClientNewServer/: Client.hs  Server.hs
examples/versioning/src/Examples/Versioning/RemovedFieldNewClientOldServer/: Client.hs  Server.hs
gen-hs/: TodoBackend_Client.hs  Todobackend_Consts.hs
lib/todo-backend/: BUILD  README.md  todo-backend.cabal
lib/todo-backend-added/: todo-backend-added.cabal
lib/todo-backend-added/src/: TodoBackend.hs  TodoBackend_Client.hs  TodoBackend_Iface.hs  Todobackendadded_Consts.hs  Todobackendadded_Types.hs  Todobackendupdated_Consts.hs  Todobackendupdated_Types.hs
lib/todo-backend-removed/: todo-backend-removed.cabal
lib/todo-backend-removed/src/: TodoBackend.hs  TodoBackend_Client.hs  TodoBackend_Iface.hs  Todobackendremoved_Consts.hs  Todobackendremoved_Types.hs
lib/todo-backend/src/: Main.hs  TodoBackend.hs  TodoBackend_Iface.hs  Todobackend_Types.hs
nixpkgs/: default.nix
src/: Main.hs
src/Binary/: Client.hs  Main.hs  Server.hs
src/Common/: Client.hs  Server.hs
src/Http/: Client.hs  Main.hs  Server.hs
src/JSON/: Client.hs  Main.hs  Server.hs
src/Transport/: Memory.hs
