name:                haskell-thrift-todo-backend
version:             0.1.0.0
homepage:            https://github.com/admanaut/haskell-thrift-todo-backend
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2019 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable haskell-thrift-todo-backend
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  other-modules:
                      -- Common
                     Common.Client
                   , Common.Server

                    -- Binary
                    , Binary.Main
                    , Binary.Client
                    , Binary.Server

                    -- JSON
                    , JSON.Main
                    , JSON.Client
                    , JSON.Server

  build-depends:       base
                       --
                     , todo-backend
                       --
                     , bytestring
                     , text
                     , hashable
                     , containers
                     , thrift
                     , QuickCheck
                     , vector
                     , unordered-containers
                     , network
