name:                examples-protocols
version:             0.1.0.0
homepage:            https://github.com/admanaut/haskell-thrift-todo-backend
license:             BSD3
author:              Author name here
maintainer:          example@example.com
copyright:           2019 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable examples-protocols
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  other-modules:
                      -- Common
                     Examples.Protocols.Common.Client
                   , Examples.Protocols.Common.Server

                    -- Binary
                    , Examples.Protocols.Binary.Main
                    , Examples.Protocols.Binary.Client
                    , Examples.Protocols.Binary.Server

                    -- JSON
                    , Examples.Protocols.JSON.Main
                    , Examples.Protocols.JSON.Client
                    , Examples.Protocols.JSON.Server

  build-depends:       base
                       --
                     , todo-backend
                       --
                     , bytestring
                     , text
                     , hashable
                     , containers
                     , thrift
                     , QuickCheck
                     , vector
                     , unordered-containers
                     , network
