name:                examples-versioning
version:             0.1.0.0
homepage:            https://github.com/admanaut/haskell-thrift-todo-backend
license:             BSD3
author:              Author name here
maintainer:          example@example.com
copyright:           2019 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable examples-versioning
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  other-modules:
                       Examples.Versioning.AddedFieldOldClientNewServer

                       , Examples.Versioning.AddedFieldOldClientNewServer.Client
                       , Examples.Versioning.AddedFieldOldClientNewServer.Server
                       , Examples.Versioning.RemovedFieldNewClientOldServer
                       , Examples.Versioning.RemovedFieldNewClientOldServer.Client
                       , Examples.Versioning.RemovedFieldNewClientOldServer.Server

  build-depends:       base
                       --
                     , todo-backend
                     , todo-backend-added
                     , todo-backend-removed

                       --
                     , bytestring
                     , text
                     , hashable
                     , containers
                     , thrift
                     , QuickCheck
                     , vector
                     , unordered-containers
                     , network
