name:                todo-backend-added
version:             0.1.0.0
homepage:            https://github.com/admanaut/haskell-thrift-todo-backend/blob/master/lib/todo-backend
license:             BSD3
author:              Author name here
maintainer:          example@example.com
copyright:           2019 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  default-language:    Haskell2010

  exposed-modules:     TodoBackend
                     , Todobackendadded_Types
                     , TodoBackend_Client
                     , TodoBackend_Iface

  other-modules:      Todobackendadded_Consts

  default-extensions:  RecordWildCards
                     , LambdaCase
                     , OverloadedStrings

  build-depends:       base
                       --
                     , bytestring
                     , text
                     , hashable
                     , containers
                     , thrift
                     , QuickCheck
                     , vector
                     , unordered-containers
